--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   django-client: 
     container_name: client
     build: . 
-  depends_on:
-    - db
-  ports:
-      - "8000:8000"
-  environment:
-      - DATABASE_URL=postgresql://admin:admin@db:5432/postgres
-      - DJANGO_SETTINGS_MODULE=client.settings
+    depends_on:
+      - db
+    ports:
+        - "8888:8888"
+    environment:
+        - DATABASE_URL=postgresql://admin:admin@db:5432/postgres
+        - DJANGO_SETTINGS_MODULE=client.settings
 
   db:
     image: postgres:16
@@ -25,16 +25,16 @@ services:
   microservices_products:
     build: ./microservices/products
     container_name: microservices_products
-    environment:
-      - DATABASE_URL=postgresql://admin:admin@db_products:5432/postgres
-    depends_on:
-      - db_products
     ports:
       - "8001:8001"
     volumes:
       - ./microservices/products:/app
     depends_on:
       - db_products
+    environment:
+      - DATABASE_URL_PRODUCTS=postgresql://admin:admin@db_products:5433/postgres
+    expose: 
+      - "8001" 
   
   db_products:
     image: postgres:16
@@ -48,6 +48,7 @@ services:
     volumes: 
       - ./microservices/products/init_products.sql:/docker-entrypoint-initdb.d/init.sql
     
+    
   microservices_warehouse:
     build: ./microservices/warehouse
     container_name: microservices_products
@@ -56,9 +57,10 @@ services:
     depends_on:
       - db_products
     ports:
-      - "8000:8000"
+      - "8002:8002"
     volumes:
       - ./microservices/products:/app
+    
 
   db_warehouse:
     image: postgres:16
@@ -71,3 +73,23 @@ services:
       - "5434:5432"
     volumes: 
       - ./microservices/warehouse/init_warehouse.sql:/docker-entrypoint-initdb.d/init.sql
+
+  kong-api_gateway: 
+    image: kong:latest
+    container_name: kong
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8008:8008"
+      - "8444:8444"
+    volumes:
+      - ./kong/kong.yml:/usr/local/kong/declarative/kong.yml
+    environment:
+      KONG_DATABASE: off
+      KONG_DECLARATIVE_CONFIG: /usr/local/kong/declarative/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+
+
