--- a/microservices/products/Dockerfile
+++ b/microservices/products/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.11-slim
 # As if you were doing "cd .."
 WORKDIR /app
 
-COPY /microservices/products .
+COPY . .
 
 # RUN command: like trying to run a linux command
 RUN pip install -r requirements.txt
 
-CMD [ "uvicorn", "app:app", "--host 0.0.0.0", "--port 8001", "--reload"]
+EXPOSE 8001
+
+CMD [ "uvicorn", "app:app", "--port", "8001", "--host", "127.0.0.1", "--reload"]
 
