--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -1,29 +1,10 @@
-_format_version: '3.0'
+_format_version: "3.0"
 
-services: 
+services:
   - name: products
     host: microservices_products
     port: 8001
-    protocol: http 
-    routes: 
-      - name: products_list
-        paths:
-          - /api/v1/products/
-        methods:
-          - GET
-          - POST
-      - name: products_detail
-        paths:
-          - ~/api/v1/products/[0-9]+
-        methods:
-          - GET
-          - PUT
-          - DELETE
-        tags:
-          - products
-      - name: products_category
-        paths:
-          - ~/api/v1/products/category/[a-zA-Z]+
-        methods:
-          - GET
-      
+    protocol: http
+    routes:
+      - name: products
+        paths: ["/products"]
