--- a/microservices/ecommerce/requirements.txt
+++ b/microservices/ecommerce/requirements.txt
@@ -1,10 +1,26 @@
 amqp==5.3.1
 annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+bidict==0.23.1
+billiard==4.2.1
 black==25.1.0
+blinker==1.9.0
+Brotli==1.1.0
+celery==5.5.3
+certifi==2025.6.15
 charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
 click-repl==0.3.0
 ConfigArgParse==1.7.1
+Django==5.2.1
+django-cors-headers==4.7.0
+django-redis==6.0.0
+djangorestframework==3.16.0
 dotenv==0.9.9
+drf-yasg==1.21.10
 fastapi==0.115.14
 Flask==3.1.1
 flask-cors==6.0.1
@@ -35,6 +51,7 @@ psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 pytest==8.3.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-engineio==4.12.2
 python-socketio==5.13.0
@@ -43,14 +60,20 @@ PyYAML==6.0.2
 pyzmq==27.0.0
 redis==6.2.0
 requests==2.32.4
+setuptools==80.9.0
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlparse==0.5.3
 starlette==0.46.2
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
+vine==5.1.0
 wcwidth==0.2.13
 websocket-client==1.8.0
 Werkzeug==3.1.3
