--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,9 +58,8 @@ services:
     networks:
       - api_network
     
-  microservices_warehouse:
+  microservices_warehouse-1:
     build: ./microservices/warehouse
-    container_name: microservices_warehouse
     depends_on:
       - db_warehouse
     ports:
@@ -71,6 +70,21 @@ services:
       - DATABASE_URL_WAREHOUSE=postgresql://admin:admin@db_warehouse:5432/postgres
     expose: 
       - "8002"
+    networks:
+      - api_network 
+  
+  microservices_warehouse-2:
+    build: ./microservices/warehouse
+    depends_on:
+      - db_warehouse
+    ports:
+      - "8022:8002"
+    volumes:
+      - ./microservices/warehouse:/app
+    environment:
+      - DATABASE_URL_WAREHOUSE=postgresql://admin:admin@db_warehouse:5432/postgres
+    expose: 
+      - "8022"
     networks:
       - api_network 
     
@@ -225,6 +239,20 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+
+  # nginx: 
+  #   image: nginx:latest
+  #   ports:
+  #     - "8080:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  #   networks:
+  #     - api_network
+  #   depends_on:
+  #     - microservices_warehouse-1
+  #     - microservices_warehouse-2
+  #   expose: 8080
 
 networks:
   api_network:
