--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -1,5 +1,33 @@
 _format_version: "3.0"
 
+# Plugin CORS global
+plugins:
+  - name: cors
+    config:
+      origins:
+        - "*"  # Permet toutes les origines (à ajuster en production)
+      methods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - PATCH
+        - OPTIONS
+      headers:
+        - Accept
+        - Accept-Version
+        - Content-Length
+        - Content-MD5
+        - Content-Type
+        - Date
+        - Authorization
+        - X-Auth-Token
+      exposed_headers:
+        - X-Auth-Token
+      credentials: true
+      max_age: 3600
+
+
 services:
   - name: products
     host: microservices_products
@@ -10,8 +38,8 @@ services:
         paths: ["/products"]
 
   - name: warehouse
-    host: microservices_warehouse
-    port: 8002
+    host: warehouse-upstream
+    port: 8002 
     protocol: http
     routes:
       - name: warehouse
@@ -32,3 +60,12 @@ services:
     routes:
       - name: ecommerce
         paths: ["/ecommerce"]
+
+upstreams:
+  - name: warehouse-upstream
+    algorithm: round-robin
+    targets:
+      - target: microservices_warehouse-1:8002
+        weight: 100
+      - target: microservices_warehouse-2:8022
+        weight: 100
